<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/actvity_horizontal_margin"
    android:paddingRight="@dimen/actvity_horizontal_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/actvity_vertical_margin"
        android:text="@string/move_activity_withot_data"/>
    <Button
        android:id="@+id/btn_move_with_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/actvity_vertical_margin"
        android:text="@string/move_activity_with_data"/>
    <Button
        android:id="@+id/btn_move_activity_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/actvity_vertical_margin"
        android:text="@string/move_with_object"/>

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/actvity_vertical_margin"
        android:text="@string/dial_number" />
    <Button
        android:id="@+id/btn_intent_with_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/actvity_vertical_margin"
        android:text="@string/intent_with_result" />
    <TextView
        android:id="@+id/tv_result_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>